:fire: fixed the problem behind radio checking and managing options state

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
   align-items: center;
   text-align: center;
   background: #ffffff;
-  margin-right: 1rem;
+  margin-right: 8px;
   border-radius: 25px;
   border: 1px solid  #8ab2ef;
   background: #ffffff;
